kubernetes/btcpay/ingress/btcpayserver-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: btcpayserver-ingress
  namespace: btcpay
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: btcpay.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: btcpayserver
                port:
                  number: 23002
