kubernetes/btcpay/ingress/rtl-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rtl-ingress
  namespace: btcpay
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: rtl.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rtl
                port:
                  number: 3000
